Bugfix/giacobini toolbar tabs height fixes (#2487)
* Playlist Editor: Toolbar Width control off screen
relates to xibosignageltd/xibo-private#679

* Editor toolbar: Add scroll for smaller resolutions
relates to xibosignageltd/xibo-private#681

--- a/ui/src/style/playlist-editor.scss
+++ b/ui/src/style/playlist-editor.scss
@@ -69,10 +69,9 @@ $timeline-step-height: 22px;
     }
 
     &.toolbar-opened {
-        padding-left: 350px;
+
 
         .back-button {
-            width: 348px;
             a {
                 min-width: 100px;
                 width: auto;
@@ -80,6 +79,38 @@ $timeline-step-height: 22px;
             span {
                 display: inline;
             }
+        }
+
+        &[toolbar-level="1"] {
+            padding-left: 220px;
+
+            .back-button {
+                width: 220px;
+            } 
+        }
+
+        &[toolbar-level="2"] {
+            padding-left: 350px;
+
+            .back-button {
+                width: 350px;
+            }   
+        }
+
+        &[toolbar-level="3"] {
+            padding-left: 480px;
+
+            .back-button {
+                width: 480px;
+            }   
+        }
+
+        &[toolbar-level="4"] {
+            padding-left: 660px;
+
+            .back-button {
+                width: 660px;
+            }   
         }
     }
 
